# assisment

./: .env  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: database.py  dependencies.py  main.py  models.py  settings.py  views.py
app/routes/: health.py  notes.py
