[project]
name = "notes"
version = "0.1.0"
description = "An api for storing and managing notes"
readme = "README.md"
requires-python = ">=3.12"
# NOTE:  If you update opentelemetry-distro or opentelemetry-exporter, you must updated the instrumentation deps.  To see compatible version...
#        uv run opentelemetry-bootstrap -a requirements
dependencies = [
    "fastapi[standard]>=0.121.1,<0.122",
    "opentelemetry-distro==0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-instrumentation-asyncio==0.59b0",
    "opentelemetry-instrumentation-click==0.59b0",
    "opentelemetry-instrumentation-dbapi==0.59b0",
    "opentelemetry-instrumentation-fastapi==0.59b0",
    "opentelemetry-instrumentation-grpc==0.59b0",
    "opentelemetry-instrumentation-httpx==0.59b0",
    "opentelemetry-instrumentation-jinja2==0.59b0",
    "opentelemetry-instrumentation-logging==0.59b0",
    "opentelemetry-instrumentation-requests==0.59b0",
    "opentelemetry-instrumentation-sqlalchemy==0.59b0",
    "opentelemetry-instrumentation-sqlite3==0.59b0",
    "opentelemetry-instrumentation-starlette==0.59b0",
    "opentelemetry-instrumentation-threading==0.59b0",
    "opentelemetry-instrumentation-tortoiseorm==0.59b0",
    "opentelemetry-instrumentation-urllib==0.59b0",
    "opentelemetry-instrumentation-wsgi==0.59b0",
    "pydantic-settings>=2.12.0",
    "psycopg2-binary",
    "sqlmodel>=0.0.27",
]
